<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.frengor</groupId>
    <artifactId>ultimateadvancementapi-parent</artifactId>
    <version>parent-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>UltimateAdvancementAPI-Parent</name>
    <description>A powerful API to create custom advancements for your minecraft server.</description>
    <url>https://github.com/frengor/UltimateAdvancementAPI</url>
    <inceptionYear>2021</inceptionYear>

    <developers>
        <developer>
            <id>fren_gor</id>
            <url>http://www.frengor.com</url>
        </developer>
        <developer>
            <id>EscanorTargaryen</id>
            <url>https://www.escanortargaryen.ml/</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v3.0 or later</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>NMS</module>
        <module>Common</module>
        <module>Commands</module>
        <module>Distribution</module>
        <module>Plugin</module>
    </modules>

    <properties>
        <!-- Project Properties -->
        <apiVersion>2.2.3</apiVersion> <!-- Change also in Versions class -->
        <libbyVersion>1.1.5</libbyVersion>
        <projectEncoding>UTF-8</projectEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>

    <repositories>
        <!-- fren_gor -->
        <repository>
            <id>fren_gor</id>
            <url>https://nexus.frengor.com/repository/public/</url>
        </repository>

        <!-- Spigot -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <!-- Libby (AlessioDP) -->
        <repository>
            <id>AlessioDP</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://nexus.frengor.com/repository/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>releases</id>
            <url>https://nexus.frengor.com/repository/releases/</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <!-- JetBrains Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
            <optional>true</optional> <!-- Don't use latest api into per-version code -->
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>4.8.0</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}-${apiVersion}</finalName>
        <defaultGoal>clean install</defaultGoal>

        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <parallel>none</parallel>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                        <minimizeJar>false</minimizeJar>
                        <createSourcesJar>true</createSourcesJar>
                        <keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
                        <shadeSourcesContent>true</shadeSourcesContent>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.0</version>
                    <executions>
                        <execution>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <quiet>true</quiet>
                        <doclint>all,-missing</doclint>
                        <failOnWarnings>true</failOnWarnings>
                        <links>
                            <link>https://frengor.com/javadocs/EventManagerAPI/build-server/</link>
                            <link>https://javadoc.io/doc/org.jetbrains/annotations/22.0.0/</link>
                            <link>https://javadoc.io/static/net.md-5/bungeecord-chat/1.16-R0.4/</link>
                            <link>https://hub.spigotmc.org/javadocs/spigot/</link>
                        </links>
                        <includeDependencySources>true</includeDependencySources>
                        <dependencySourceIncludes>
                            <dependencySourceInclude>com.frengor:ultimateadvancementapi*</dependencySourceInclude>
                        </dependencySourceIncludes>
                        <dependencySourceExcludes>
                            <dependencySourceExclude>com.frengor:ultimateadvancementapi-nms-1_*</dependencySourceExclude>
                            <dependencySourceExclude>com.frengor:ultimateadvancementapi-nms-mocked*</dependencySourceExclude>
                        </dependencySourceExcludes>

                        <bottom>
                            <!-- Hacky way to insert custom css without modifying the full css style file -->
                            <![CDATA[<style>main a[href*="://"]::after{content: none;}</style>Copyright &#169; {inceptionYear}&#x2013;{currentYear} fren_gor, EscanorTargaryen. All rights reserved.]]>
                        </bottom>
                        <tags>
                            <tag>
                                <name>apiNote</name>
                                <placement>a</placement>
                                <head>API Note:</head>
                            </tag>
                            <tag>
                                <name>implSpec</name>
                                <placement>a</placement>
                                <head>Implementation Requirements:</head>
                            </tag>
                            <tag>
                                <name>implNote</name>
                                <placement>a</placement>
                                <head>Implementation Note:</head>
                            </tag>
                            <tag>
                                <name>param</name>
                            </tag>
                            <tag>
                                <name>return</name>
                            </tag>
                            <tag>
                                <name>throws</name>
                            </tag>
                            <tag>
                                <name>since</name>
                            </tag>
                            <tag>
                                <name>version</name>
                            </tag>
                            <tag>
                                <name>serialData</name>
                            </tag>
                            <tag>
                                <name>see</name>
                            </tag>
                        </tags>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
